[package]
name = "atom_bombing_inject_loader"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
winres = "0.1"
rand = "0.9.0"

[dependencies]
windows = { version = "0.48.0", features = ["Win32_Foundation", "Win32_System_Diagnostics_Debug", "Win32_System_Kernel", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_System_Memory", "Win32_Security", "Win32_Graphics_Gdi", "Win32_System_SystemInformation", "Win32_System_Diagnostics_ToolHelp"] }
lazy_static = "1.5.0"
rand = "0.9.0"
num_cpus = "1.16.0"
log = "0.4.27"


[profile.release]
opt-level = 3
codegen-units = 1
lto = true
